--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <script>
     // =============== API CONFIG ===============
     const API_BASE = 'https://script.google.com/macros/s/AKfycbwBBfXb1CQKk5rYljkT3V89DLXSLdTTTHQGe39MJSw/dev'; // <-- رابطك
-    const API_KEY  = 'PUT_YOUR_API_KEY'; // ضع نفس القيمة من Script Properties
+    const API_KEY  = '1W1UhrA7G7Df1HbVlyZ1Sh9tVNtD-E6HhW7yWQ6QkCw1ilg4RvIx5Y26Z'; // ضع نفس القيمة من Script Properties
 
     // =============== Helpers ===============
     const $ = (s)=> document.querySelector(s);
