--- a/engineer-dashboard.html
+++ b/engineer-dashboard.html
@@ -108,7 +108,7 @@
   <script>
     // ================== إعدادات الربط ==================
     const API_BASE = 'https://script.google.com/macros/s/AKfycbwBBfXb1CQKk5rYljkT3V89DLXSLdTTTHQGe39MJSw/dev'; // رابطك
-    const API_KEY  = 'PUT_YOUR_API_KEY'; // ضع API KEY نفسه من Script Properties
+    const API_KEY  = '1W1UhrA7G7Df1HbVlyZ1Sh9tVNtD-E6HhW7yWQ6QkCw1ilg4RvIx5Y26Z'; // ضع API KEY نفسه من Script Properties
 
     // إعدادات قادمة من السيرفر (Settings Sheet)
     let SETTINGS = { PRIMARY_COLOR:'#f97316', FONT_FAMILY:'Tajawal', REQUIRE_ADDRESS_DETAIL:'true', REQUIRE_NOTES:'true', REQUIRE_PHOTO:'false' };
