--- a/engineer-dashboard.html
+++ b/engineer-dashboard.html
@@ -122,11 +122,11 @@
         <div class="row g-3">
           <div class="col-md-6">
             <label class="form-label">API Base URL</label>
-            <input id="cn_api" class="form-control" placeholder="https://script.google.com/macros/s/xxx/exec">
+            <input id="cn_api" class="form-control" placeholder="https://script.google.com/macros/s/AKfycbw5JAAzQciOSl2z0XtKG5bqk2JkifVPLMMrPou2Ns0xXeOehE0-12z3u0qTdgXxIFwI/exec">
           </div>
           <div class="col-md-4">
             <label class="form-label">API Key</label>
-            <input id="cn_key" class="form-control" placeholder="مثال: f642...-fb1">
+            <input id="cn_key" class="form-control" placeholder=" f642937d-fb1">
           </div>
           <div class="col-md-2 d-grid">
             <label class="form-label invisible">—</label>
